# os

Lab_OS_5/: CMakeLists.txt  client.cpp  main.cpp
OS_Lab_6/: CMakeLists.txt  client.cpp  client.h  logger.cpp  logger.h  main.cpp  server.cpp  server.h
OS_lab4/: CMakeLists.txt  client.cpp  main.cpp
